GridClassKey dev
=================================================
- added manager tree's icons

GridClassKey 1.0.2-pl (September 5, 2016)
=================================================
- [#136] container occasionally ignores limit at the first load
- simplify default fields
- bugfix array loop at the first load

GridClassKey 1.0.1-pl (January 28, 2016)
=================================================
- fill proper default settings for new container
- [#131] exclude some booleans for output filter because ExtJs needs it
- [#122] revert publishedon
- [#124] Fix font-style for check-boxes, MODX 2.3.x
- add icon class to system settings
- fixed array's error on initial listing

GridClassKey 1.0.1-rc3 (November 6, 2014)
=================================================
- [#112] Quick add resources as rows [$50] bounty placed by @neoneddy

GridClassKey 1.0.1-rc2 (September 21, 2014)
=================================================
- give option to remove limit on revealing children on tree
- [#116] fix error when creating a document in the root of the site by @RuGa
- [#113] New children's settings checkboxes not saved [$10] bounty placed by @vierkantemeter

GridClassKey 1.0.1-rc1 (August 30, 2014)
=================================================
- [#104] FR: field editor as json-params
- refresh grid after row editing
- [#103][#104] fix Inline Editing Not working MODx 2.3
- avoid duplicate values on advanced search grid
- bugfix Removing Field Criteria removes all

GridClassKey 1.0.1-beta4 (August 12, 2014)
=================================================
- [#100] Delete/undelete icon doesn't work in Revo 2.3.1
- Update permissions in CMP
- add Static Grid Container
- [#99] fix different data types on action comparison

GridClassKey 1.0.1-beta3 (July 27, 2014)
=================================================
- fix un/publish permission existence on JS's config
- [#90] Delete button still exists for 'id' in settings > fields